# SMIP-MWP-Rust

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOYMENT.manifest.md  Dockerfile  INVENTORY_AND_TRANSLATION_MAP.md  LICENSE  LICENSE-summary.md  Makefile  PACKAGES.md  PR_RECOMMENDATION.md  README.md  RELEASE.md  RUST_VALIDATION_AND_BENCHMARKING.md  deepbook-mvp-analysis.txt  nohup.out
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUES/: 0001-afxdp-full-tx-path.md  0002-hardware-smoke-tests.md  0003-bridge-datapath-wiring.md  0004-observability.md  0005-sla-ci-protection.md
.github/workflows/: bench-harness.yml  ci.yml  flamegraph.yml  metrics_smoke.yml  remote-bench.yml  sla_protection.yml
afxdp/: Cargo.toml  README.md
afxdp/src/: lib.rs  rings.rs  socket.rs  umem.rs
bench/: Cargo.toml  README.md
bench/benches/: alloc_bench.rs  crypto_overhead_bench.rs  datapath_bench.rs  line_rate_bench.rs  packet_copy_bench.rs  poll_slices_bench.rs  routing_miss_bench.rs
bench/src/: lib.rs  main.rs  token_bench.rs
benchmark/: Cargo.toml  FLAMEGRAPH_RUN.md  PERFORMANCE_ENVELOPE.md  README.md  chaos_failure_summary.md  chaos_report.md  crypto_overhead.md  mcr_chaos_report.md  report_mpps.txt  report_throughput.md
benchmark/src/: main.rs
bridge/: bridge_contract.manifest.json  bridge_contract.schema.json
bridge/examples/: control_request.example.json
cli/: Cargo.toml  README.md
cli/src/: bridge.rs  main.rs  worker.rs
crypto/: Cargo.toml  README.md  integration_test.rs  security_hardening.rs
crypto/src/: kex.rs  lib.rs  security_hardening.rs  session.rs
datapath/: Cargo.toml  Makefile  README.md
datapath/src/: lib.rs  mcr_config.rs
deepbook-integration/: Cargo.toml  README.md
deepbook-integration/docs/: DEEPBOOK_MVP.md  FORMAL_SPECS.md
deepbook-integration/src/: deepbook_client.rs  lib.rs  main.rs  oracle_reader.rs  position_manager.rs  vault_flow.rs
deepbook-integration/tests/: settlement_proof.rs
docs/: mcr_architecture.md
docs/archive/: INVENTORY_AND_TRANSLATION_MAP.md
docs/formal/: THEOREM_REMEDIATION_TRACKER.md
docs/perf/: README.md  bench_results.csv  routing_miss_sweep.csv  routing_miss_sweep_broad.csv  routing_miss_sweep_fine.csv
routing/: Cargo.toml  README.md
routing/src/: lib.rs
tools/: README.md  compute_stats.py  param_sweep.sh  parse_bench.py  plot_bench.py  run_pinned_bench.sh
tools/bench_harness/: parse_and_append.py  parse_routing_miss_criterion.py  plot_results.py  plot_routing_miss_sweep.py  run_bench_harness.sh  run_routing_miss_sweep.sh  summarize_csv.py
tools/bench_results/: PR_PERFORMANCE_NOTES.md  aggregate_results.py  bench_report.md  bench_results_session.csv  bench_summary.csv  bench_summary_session.csv  chaos_epyc_profile.csv  ci_baseline_mcr.txt  crypto_baselines.json  datapath_alloc_events.csv  datapath_bench_after_opt.txt  datapath_handle_events.csv  datapath_profile.csv  forwarder_hotspots.md  parse_forwarder_profiles.py  routing_miss_bench_after_opt.txt  routing_miss_bench_current.txt  routing_miss_pinned_20260528_125903.txt  routing_miss_pinned_core2_run10_20260528_144048.txt  routing_miss_pinned_core2_run10_20260528_152119.txt  routing_miss_pinned_core2_run1_20260528_131003.txt  routing_miss_pinned_core2_run1_20260528_133515.txt  routing_miss_pinned_core2_run1_20260528_140001.txt  routing_miss_pinned_core2_run1_20260528_142237.txt  routing_miss_pinned_core2_run1_20260528_150316.txt  routing_miss_pinned_core2_run2_20260528_131247.txt  routing_miss_pinned_core2_run2_20260528_133742.txt  routing_miss_pinned_core2_run2_20260528_140209.txt  (+68 more)
tools/perf/: README.md  (+1 more)
wire/: Cargo.toml  README.md
(+27 files in other folders)
