[workspace]
resolver = "2"
members = [
    "wire",
    "crypto",
    "routing",
    "datapath",
    "afxdp",
    "cli",
    "bench",
    "benchmark",
]

[workspace.metadata]
description = "Rust rewrite workspace for SMIP-MWP (scaffold)"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
