[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
datapath = { path = "../datapath" }
routing = { path = "../routing" }
wire = { path = "../wire" }
crypto = { path = "../crypto" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "alloc_bench"
harness = false

[[bench]]
name = "datapath_bench"
harness = false

[[bench]]
name = "packet_copy_bench"
harness = false

[[bench]]
name = "poll_slices_bench"
harness = false

[[bench]]
name = "routing_miss_bench"
harness = false

[[bench]]
name = "crypto_overhead_bench"
harness = false
