[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mohawk-node"
path = "src/main.rs"

[dependencies]
afxdp = { path = "../afxdp" }
datapath = { path = "../datapath" }
routing = { path = "../routing" }
wire = { path = "../wire" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
core_affinity = "0.8"
