[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.21"
zeroize = { version = "1", features = ["zeroize_derive"] }
x25519-dalek = { version = "2", features = ["static_secrets", "reusable_secrets"] }
ml-kem = "0.1.1"
kem = "=0.3.0-pre.0"
hybrid-array = "=0.2.0-rc.9"

[dev-dependencies]
rand = "0.8"
