[package]
name = "deepbook-agent"
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Mohawk Proto LLC <ops@sovereignmohawk.io>"]
description = "DeepBook v3 agent for Predict markets with formal verification"
license = "AGPL-3.0"

[dependencies]
# Sui SDK for blockchain interactions
sui-sdk = "0.18"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# DeepBook client (WASM interop)
deepbook-client-wasm = { git = "https://github.com/MystenLabs/deepbookv3.git", branch = "main" }

# Cryptographic primitives (reuse crypto crate)
# hybrid-kex = { path = "../crypto" } # TODO: feature gate

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "deepbook-agent"
path = "src/main.rs"
